# cloverlap

./: .gitignore  CHANGELOG.md  Makefile  README.md  READMEes.md  class.cabal  cloverlap.cabal  example.csv  flake.nix  report.html  result
app/: GuiMain.hs  Logic.hs  Main.hs  Optimize.hs  Overlap.hs  Parser.hs  Print.hs  Server.hs  Types.hs
app/Logic/: Optimize.hs  Overlap.hs
app/src/: Optimize.hs  Overlap.hs  Parser.hs  Print.hs  Types.hs
dist-newstyle/cache/: compiler  config
frontend/: index.html
frontend/src/: Main.elm  Network.elm  Types.elm  View.elm
src/: Overlap.hs
