cabal-version:      3.0
name:               cloverlap
version:            0.1.0.0
synopsis:           Software for optimally picking your course's classes
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             TuKankamon
maintainer:         198082906+Tukankamon@users.noreply.github.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
  exposed-modules: Types, Parser, Print, Optimize, Overlap
  hs-source-dirs: src
  build-depends:    base ^>=4.20.2.0,
    cassava,
    bytestring,
    vector,
    time,
    sort
  default-language: Haskell2010

executable cloverlap
    import:           warnings
    main-is:          Main.hs
    other-modules:
    build-depends:    base ^>=4.20.2.0, cloverlap, vector, optparse-applicative
    hs-source-dirs:   app
    default-language: Haskell2010

executable cloverlap-gui
    import:           warnings
    main-is:          GuiMain.hs
    build-depends:    base ^>=4.20.2.0, cloverlap
    hs-source-dirs:   app
    default-language: Haskell2010
