cabal-version:      3.0
name:               cloverlap
version:            0.1.0.0
synopsis:           Software for optimally picking your course's classes
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             TuKankamon
maintainer:         198082906+Tukankamon@users.noreply.github.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
 ghc-options: -Wall

library
 exposed-modules: Types, Parser, Print, Optimize, Overlap
 hs-source-dirs: app/src
 build-depends:    base,
  cassava,
  bytestring,
  vector,
  time,
  sort
 default-language: Haskell2010

executable cloverlap
 import:           warnings
 main-is:          Main.hs
 other-modules:
 build-depends:    base, cloverlap, vector, optparse-applicative
 hs-source-dirs:   app
 default-language: Haskell2010

executable server
 import:           warnings
 main-is:          Server.hs
 other-modules:
 build-depends:    base, cloverlap, scotty, wai-extra, wai-middleware-static
 hs-source-dirs:   app
 default-language: Haskell2010
 ghc-options: -threaded -rtsopts -with-rtsopts=-N
