cabal-version:      3.0
name:               cloverlap
version:            0.1.0.0
synopsis:           Software for optimally picking your course's classes
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             TuKankamon
maintainer:         198082906+Tukankamon@users.noreply.github.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
 ghc-options: -Wall -Wextra

library
 exposed-modules: Types, Parser, Print, Optimize, Overlap
 hs-source-dirs: app/src
 build-depends:    base,
  cassava,
  bytestring,
  vector,
  time,
  sort,
  aeson
 default-language: Haskell2010

executable cli
 import:           warnings
 main-is:          Main.hs
 other-modules:
 build-depends:    base, cloverlap, vector, optparse-applicative
 hs-source-dirs:   app
 default-language: Haskell2010

executable server
 import:           warnings
 main-is:          Server.hs
 other-modules:
 build-depends:    base, cloverlap, scotty, wai-extra, wai-middleware-static, vector, aeson, text, http-types, bytestring
 hs-source-dirs:   app
 default-language: Haskell2010
 ghc-options: -threaded -rtsopts -with-rtsopts=-N
